added rollup for browser support

--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <title>Covid19 - India</title>
     <meta name="description" content="India Covid 19 state and district wise tracker">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1">
-    <link rel="stylesheet" type="text/css" href="./src/style.less">
-
+    <link rel="stylesheet" type="text/css" href="src/style.css">
 </head>
 
 <body>
     <div id='map'></div>
-    <script src="./webtree.js"></script>
-    <script src="./script.js"></script>
+    <script src="./src/webtree.js"></script>
+    <script src="./dist/script.js"></script>
 </body>
 
 </html>
