add minified js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id='map'></div>
-    <script src="./src/webtree.js"></script>
+    <script src="./dist/webtree.min.js"></script>
     <script src="./dist/script.js"></script>
 </body>
 
