added header component and css changes

--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Covid19 - India</title>
-    <meta name="description" content="India Covid 19 state and district wise tracker">
+    <meta name="description" content="India Covid 19 State and District wise Tracker">
+    <meta name="author" content="Ajaykumar Prathap">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1">
+    <meta property="og:title" content="India Covid 19 State and District wise Tracker">
+    <meta property="og:description"
+        content="Real Time Visualization of India COVID-19 data based on state and district wise on daily basis">
     <link rel="stylesheet" type="text/css" href="src/style.css">
 </head>
 
 <body>
+    <header>
+        <div class="title">
+            <img src="src/img/covid.svg">
+            <h1>India State and District wise COVID-19 Tracker</h1>
+        </div>
+        <div class="subtitle">Built by <a href="https://twitter.com/pajay2507">Ajay</a>, Check out the source code
+            here<a href="https://github.com/pajaydev/covid19">Github</a></div>
+    </header>
     <div id='map'></div>
     <script src="./dist/webtree.min.js"></script>
     <script src="./dist/script.js"></script>
