minify js files using rollup

--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
                 <img src="src/img/covid.svg">
                 <h1>India State and District wise COVID-19 Tracker</h1>
             </div>
-            <div class="subtitle">Built by <a href="https://twitter.com/pajay2507">Ajay</a>, Check out the source code
+            <div class="subtitle">Built by
+                <a href="https://twitter.com/pajay2507">Ajay</a>, Check out the source code
                 here<a href="https://github.com/pajaydev/covid19">Github</a></div>
         </div>
         <div class="right">
-            <div class="links"><label>Click here for Indian Govt Website</label><a
-                    href="https://www.mohfw.gov.in/">Ministry of Health and
+            <div class="links"><label> Indian Govt Website:</label><a href="https://www.mohfw.gov.in/">Ministry of
+                    Health
+                    and
                     Family Welfare</a></div>
-            <div class="links"><label>Click here for Helpline Numbers</label><a
-                    href="https://www.mygov.in/covid-19">India - COVID-19</a></div>
+            <div class="links"><label>Helpline Numbers:</label><a href="https://www.mygov.in/covid-19">India -
+                    COVID-19</a></div>
         </div>
     </header>
     <div id='map'></div>
     <script src="./dist/webtree.min.js"></script>
-    <script src="./dist/script.js"></script>
+    <script src="./dist/script.min.js"></script>
 </body>
 
 </html>
