included cards html and css

--- a/index.html
+++ b/index.html
@@ -33,7 +33,35 @@
                     COVID-19</a></div>
         </div>
     </header>
-    <div id='map'></div>
+    <div class="wrapper">
+        <div class="cards">
+            <div class="card">
+                <div class="inner-card active">
+                    <p class="card-number">1,345,048</p>
+                    <p class="card-text">Confirmed Cases</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="inner-card confirmed">
+                    <p class="card-number">1,345,048</p>
+                    <p class="card-text">Active cases</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="inner-card recovered">
+                    <p class="card-number">1,345,048</p>
+                    <p class="card-text">recovered cases</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="inner-card death">
+                    <p class="card-number">1,345,048</p>
+                    <p class="card-text">recovered cases</p>
+                </div>
+            </div>
+        </div>
+        <div id='map'></div>
+    </div>
     <script src="./dist/webtree.min.js"></script>
     <script src="./dist/script.min.js"></script>
 </body>
