--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div id='map'></div>
     </div>
     <script src="./dist/webtree.min.js"></script>
-    <script src="./dist/script.min.js"></script>
+    <script src="./dist/script.js"></script>
 </body>
 
 </html>
