fixed state wise cases

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:title" content="India Covid 19 State and District wise Tracker">
     <meta property="og:description"
         content="Real Time Visualization of India COVID-19 data based on state and district wise on daily basis">
+    <link rel="icon" type="image/png" href="src/img/icon.png">
     <link rel="stylesheet" type="text/css" href="src/style.css">
 </head>
 
@@ -37,32 +38,32 @@
         <div class="cards">
             <div class="card">
                 <div class="inner-card active">
-                    <p class="card-number">1,345,048</p>
+                    <p class="card-number"></p>
                     <p class="card-text">Confirmed Cases</p>
                 </div>
             </div>
             <div class="card">
                 <div class="inner-card confirmed">
-                    <p class="card-number">1,345,048</p>
+                    <p class="card-number"></p>
                     <p class="card-text">Active cases</p>
                 </div>
             </div>
             <div class="card">
                 <div class="inner-card recovered">
-                    <p class="card-number">1,345,048</p>
-                    <p class="card-text">recovered cases</p>
+                    <p class="card-number"></p>
+                    <p class="card-text">Recovered Cases</p>
                 </div>
             </div>
             <div class="card">
                 <div class="inner-card death">
-                    <p class="card-number">1,345,048</p>
-                    <p class="card-text">recovered cases</p>
+                    <p class="card-number"></p>
+                    <p class="card-text">Death Cases</p>
                 </div>
             </div>
         </div>
         <div id='map'></div>
     </div>
-    <script src="./dist/webtree.min.js"></script>
+    <script src="./webtree.js"></script>
     <script src="./dist/script.js"></script>
 </body>
 
