include minified js version

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         </div>
         <div id='map'></div>
     </div>
-    <script src="./webtree.js"></script>
-    <script src="./dist/script.js"></script>
+    <script src="dist/webtree.min.js"></script>
+    <script src="dist/script.min.js"></script>
 </body>
 
 </html>
